fix: Remove overflow hidden from page container

--- a/src/app/(frontend)/_components/PageComponents/PageComponents.module.scss
+++ b/src/app/(frontend)/_components/PageComponents/PageComponents.module.scss
@@ -11,7 +11,6 @@
 }
 
 .mainContent {
-  overflow: hidden;
   @include columns(3, -1);
 
   &__fullWidth {
